start work on resetpassword

--- a/lostpassword.html
+++ b/lostpassword.html
@@ -4,9 +4,20 @@
 <head>
 
 </head>
+<link rel="stylesheet" type="text/css" href="css/lostpassword.css">
 
 <body>
-    Not yet inplemented
+    <div class="lostpassword-form">
+        <form method="post" action="sendlink.php">
+            <h1>Forgot Password</h1>
+            <p>Enter Email Address To Send Password Link</p>
+            <input type="text" name="email">
+            <input type="submit" name="submit_email">
+        </form>
+        <form action="/index.html">
+            <button>Login</button>
+        </form>
+    </div>
 </body>
 
 </html>
