update to  everything ;)

--- a/lostpassword.html
+++ b/lostpassword.html
@@ -8,7 +8,7 @@
 
 <body>
     <div class="lostpassword-form">
-        <form method="post" action="sendlink.php">
+        <form method="post" action="php/sendemail.php">
             <h1>Forgot Password</h1>
             <p>Enter Email Address To Send Password Link</p>
             <input type="text" name="email">
